# gameboy-rs

./: .gitignore  Cargo.toml  README.md
pkg/: gameboy.d.ts  gameboy.js  gameboy_bg.wasm  package-lock.json  package.json
src/: bin.rs  cartridge.rs  debug_log.rs  display.rs  gl_display.rs  gpu.rs  lib.rs  main.rs  mmu.rs  ram.rs  wasmdisplay.rs
src/cpu/: cpuflags.rs  macros.rs  mod.rs  opcodes.rs  tests.rs
src/cpu/tests/: adc.rs  add.rs  and.rs  call.rs  cp.rs  daa.rs  dec.rs  inc.rs  jp.rs  jr.rs  ld.rs  misc.rs  mod.rs  nop.rs  notavailable.rs  or.rs  pop.rs  push.rs  ret.rs  rlc.rs  rotate.rs  rst.rs  sbc.rs  shift.rs  stop.rs  sub.rs  swap.rs  xor.rs
src/wasm/: mod.rs  wasmdisplay.rs  wasmlog.rs
www/: hackfest.gb  index.html  index.js  package-lock.json
